--- a/src/style.css
+++ b/src/style.css
@@ -1,8 +1,54 @@
+body {
+    background-image: url('mosaic.jpg')
+}
+.title {
+    background-color: palevioletred;
+    color:white;
+    position: fixed;
+    width: 100%;
+    top: 0px;
+    padding: 10px;
+    font-family: 'Press Start 2P', cursive;
+    z-index: 6;
+}
+.waterBackground {
+    background-color: steelblue;
+    width: 100%;
+    height: 800px;
+    z-index: 0;
+    position: relative;
+}
+
+canvas {
+    position: relative;
+    z-index: 1;
+}
+
+#search {
+    position: absolute;
+    top: 100px;
+    z-index: 2;
+    text-align: center;
+    width: 100%;
+}
+#winScreen {
+    visibility: hidden;
+    position: absolute;
+    text-align: center;
+    font-family: 'Press Start 2P', cursive;
+    font-size: 30px;
+    background-color: pink;
+    color: dimgray;
+    padding: 20px;
+    z-index: 10;
+    top: 300px;
+    width: 100%;
+}
+
 h1 {
     font-family: 'Staatliches', cursive;
     /*font-family: 'Roboto Mono', monospace;
     font-family: 'Major Mono Display', monospace;
-    font-family: 'Hanalei Fill', cursive;
     font-family: 'Rajdhani', sans-serif;
     font-family: 'Orbitron', sans-serif;
     font-family: 'Special Elite', cursive;
