--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,7 @@
 body {
-    background-image: url('mosaic.jpg')
+    background-image: url('mosaic.jpg');
+    background-size: 1800px 900px;
+    background-repeat: no-repeat; 
 }
 .title {
     background-color: palevioletred;
@@ -11,6 +13,17 @@ body {
     font-family: 'Press Start 2P', cursive;
     z-index: 6;
 }
+.title1 {
+    background-color: palevioletred;
+    color:white;
+    position: fixed;
+    width: 100%;
+    height: 350px;
+    top: 0px;
+    padding: 30px;
+    font-family: 'Press Start 2P', cursive;
+    z-index: 0;
+}
 .waterBackground {
     background-color: steelblue;
     width: 100%;
@@ -18,12 +31,18 @@ body {
     z-index: 0;
     position: relative;
 }
-
+.button-row {
+    position: relative;
+    top: 400px;
+    text-align: center;
+}
+button {
+    padding: 20px;
+}
 canvas {
     position: relative;
     z-index: 1;
 }
-
 #search {
     position: absolute;
     top: 100px;
@@ -57,108 +76,6 @@ h1 {
     font-family: 'Quantico', sans-serif; */
 
 }
-
-.card {
-    background-color: lightblue;
-    height: 150px;
-    outline-style: solid;
-    outline-width: 5px;
-    outline-color: white;
-    font-size: 100px;
-    text-align: center;
-}
-
-#intro1 {
-    visibility: visible;
-    position: fixed;
-    top: 50px;
-    color: white;
-    background-color: olive;
-    text-align: center;
-    margin: 100px;
-    font-size: 25px;
-    padding: 10px;
-    height: 300px;
-    outline-style: solid;
-    outline-width: 8px;
-    outline-color: black;
-}
-#intro2 {
-    visibility: hidden;
-    position: fixed;
-    top: 50px;
-    color: white;
-    background-color: olive;
-    text-align: center;
-    margin: 100px;
-    font-size: 25px;
-    padding: 10px;
-    height: 300px;
-    outline-style: solid;
-    outline-width: 8px;
-    outline-color: black;
-}
-#intro3 {
-    visibility: hidden;
-    position: fixed;
-    top: 50px;
-    color: white;
-    background-color: olive;
-    text-align: center;
-    margin: 100px;
-    font-size: 25px;
-    padding: 10px;
-    height: 300px;
-    outline-style: solid;
-    outline-width: 8px;
-    outline-color: black;
-}
-#intro4 {
-    visibility: hidden;
-    position: fixed;
-    top: 50px;
-    color: white;
-    background-color: olive;
-    text-align: center;
-    margin: 100px;
-    font-size: 25px;
-    padding: 10px;
-    height: 300px;
-    outline-style: solid;
-    outline-width: 8px;
-    outline-color: black;
-}
-#intro5 {
-    visibility: hidden;
-    position: fixed;
-    top: 50px;
-    color: white;
-    background-color: olive;
-    text-align: center;
-    margin: 100px;
-    font-size: 25px;
-    padding: 10px;
-    height: 300px;
-    outline-style: solid;
-    outline-width: 8px;
-    outline-color: black;
-}
-#intro6 {
-    visibility: hidden;
-    position: fixed;
-    top: 50px;
-    color: white;
-    background-color: olive;
-    text-align: center;
-    margin: 100px;
-    font-size: 25px;
-    padding: 10px;
-    height: 300px;
-    outline-style: solid;
-    outline-width: 8px;
-    outline-color: black;
-}
-
 canvas {
     border:1px solid #d3d3d3;
     background-color: #f1f1f1;
@@ -184,15 +101,6 @@ canvas {
     font-family: 'Quantico', sans-serif;
 }
 
-.dicerow {
-    text-align: center;
-    outline-style: solid;
-    outline-color: pink;
-}
-.dicecol {
-    text-align: center;
-    height: 100px;
-}
 .container {
     position: relative;
     top: 120px;
