--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url('mosaic.jpg');
+    background-image: url('Russian.jpg');
     background-size: 1800px 900px;
     background-repeat: no-repeat; 
 }
